--- a/src/app/pages/projects/identification/identification.component.scss
+++ b/src/app/pages/projects/identification/identification.component.scss
@@ -56,3 +56,12 @@
 .text-gray{
     color:#f3f6f9 !important;
 }
+.tono1{
+    background: #d6e6ff;//#f3f3f9;
+}
+.tono2{
+    background: #f3f3f9;
+}
+.pointer{
+    cursor: pointer;
+}
