--- a/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
+++ b/src/app/pages/dashboards/project-dashboard/project-dashboard.component.html
@@ -118,7 +118,7 @@
                     </li>
                     <li [ngbNavItem]="2">
                         <a ngbNavLink>
-                          Control
+                          Evaluaciones
                         </a>
                         <ng-template ngbNavContent>
                           <div class="row">
@@ -126,7 +126,9 @@
                                 
                                 <div class="row g-4 mb-3">
                                     <div class="col-sm">
-                                        
+                                        <div>
+                                            <button type="button" class="btn btn-success btn-label waves-effect left waves-light"><i class="ri-add-line label-icon align-middle fs-16"><!--ms-2--></i> Finalizar Evaluación</button>
+                                        </div>
                                     </div>
                                     <div class="col-sm-auto">
                                         <div class="d-md-flex justify-content-sm-end gap-2">
@@ -200,7 +202,7 @@
 
                                                                             <div class="col-lg-2 col">
                                                                                 <div class="progress progress-xl">
-                                                                                    <div class="progress-bar" [ngClass]="{'bg-danger': v.avance < 25, 'bg-warning': v.avance > 25 && v.avance < 75, 'bg-success': v.avance > 75 }" role="progressbar" [style]="v.avance > 0 ? 'width:'+v.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{v.avance}}%</div>
+                                                                                    <div class="progress-bar" [ngClass]="{'bg-danger': v.avance > 0 && v.avance < 25, 'bg-warning': v.avance > 25 && v.avance < 75, 'bg-success': v.avance > 75 }" role="progressbar" [style]="v.avance > 0 ? 'width:'+v.avance+'%;':'width: 10%;color: #000;background: #eff2f7;'" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{v.avance}}%</div>
                                                                                 </div>
                                                                             </div>
 
@@ -225,7 +227,7 @@
                     </li>
                     <li [ngbNavItem]="3">
                         <a ngbNavLink>
-                          Evaluaciones
+                          Control
                         </a>
                         <ng-template ngbNavContent>
                           
