--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -23,26 +23,31 @@
         </div>
         <div class="card-body">
             <div class="row justify-content-center mb-5">
-                <div class="col-xxl-3 col-lg-3 text-center">
-                    <div class="card-subtitle text-muted mb-3">CUERPO LEGALES VINCULADOS</div>
-                    <div style="font-size: 72px;"><b>{{cuerpos_articulos ? (cuerpos_articulos.length > 0 ? cuerpos_articulos.length : 0) : 0}}</b></div>
+                <div class="col-xxl-4 col-lg-4 text-center" style="align-self: center;">
+                    <div class="card-subtitle text-muted mb-3"><b>Avance</b></div>
+                    <div class="progress progress-xl mb-3">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-xxl-8 col-lg-8" style="text-align: left;">
+                            <h4>Total Cuerpos Legales</h4>
+                        </div> 
+                        <div class="col-xxl-4 col-lg-4">
+                            <b>{{cuerpos_articulos ? (cuerpos_articulos.length > 0 ? cuerpos_articulos.length : 0) : 0}}</b>
+                        </div>
+                    </div>
+                    
+                    <div class="row mb-3">
+                        <div class="col-xxl-8 col-lg-8" style="text-align: left;">
+                        <h4>Total Artículos</h4> 
+                        </div>
+                        <div class="col-xxl-4 col-lg-4">
+                            <b>{{total_articulos}}</b>
+                        </div>
+                    </div>
                 </div>
                 
-                <div class="col-xxl-3 col-lg-3 text-center">
-                    <div class="card-subtitle text-muted mb-3">ARTÍCULOS LEGALES VINCULADOS</div>
-                    <div style="font-size: 72px;"><b>{{total_articulos}}</b></div>
-                </div>
-
-                <div class="col-xxl-3 col-lg-3 text-center">
-                    <p><b>AVANCE:</b></p>                    
-                        <apx-chart [series]="basicRadialbarChart.series" [chart]="basicRadialbarChart.chart"
-                        [plotOptions]="basicRadialbarChart.plotOptions" [labels]="basicRadialbarChart.labels"
-                        [colors]="basicRadialbarChart.colors" dir="ltr"></apx-chart>
-                </div>
-            </div>
-
-            <div class="row justify-content-center mb-5">
-                <div class="col-xxl-6 col-lg-6 text-center">
+                <div class="col-xxl-4 col-lg-4 text-center">
                     <div class="card-subtitle text-muted mb-3"><b>Cuerpos legales</b></div>
                     <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
             [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
@@ -50,8 +55,35 @@
             [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
                 </div>
                 
-                <div class="col-xxl-6 col-lg-6 text-center">
-                    <div class="card-subtitle text-muted mb-3"><b>Artículos legales</b></div>
+                <div class="col-xxl-4 col-lg-4 text-center">
+                    <div class="card-subtitle text-muted mb-3"><b>Artículos</b></div>
+                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
+            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
+            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
+            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                </div>
+            </div>
+
+            <div class="row justify-content-center mb-5">
+                <div class="col-xxl-4 col-lg-4 text-center">
+                    <div class="card-subtitle text-muted mb-3"><b>Permisos</b></div>
+                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
+            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
+            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
+            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                </div>
+                
+                <div class="col-xxl-4 col-lg-4 text-center">
+                    <div class="card-subtitle text-muted mb-3"><b>Reportes</b></div>
+                    <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
+            [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
+            [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
+            [responsive]="customAngleChart.responsive" dir="ltr"></apx-chart>
+                </div>
+                
+                
+                <div class="col-xxl-4 col-lg-4 text-center">
+                    <div class="card-subtitle text-muted mb-3"><b>Monitoreos</b></div>
                     <apx-chart [series]="customAngleChart.series" [chart]="customAngleChart.chart"
             [plotOptions]="customAngleChart.plotOptions" [labels]="customAngleChart.labels"
             [legend]="customAngleChart.legend" [colors]="customAngleChart.colors"
