ajustes hallazgos visual

--- a/src/app/pages/auditor/create/create.component.html
+++ b/src/app/pages/auditor/create/create.component.html
@@ -42,7 +42,7 @@
                                     </li>
                                     <li [ngbNavItem]="3" [disabled]="installations_select < 1">
                                         <a ngbNavLink (click)="changeTab(3)">
-                                            <span class="d-sm-block">Vincular Articulos legales</span>
+                                            <span class="d-sm-block">Vincular Articulos</span>
                                         </a>
                                         <ng-template ngbNavContent>
                                             <ng-template [ngTemplateOutlet]="TabContent2"></ng-template>
