--- a/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
+++ b/src/app/pages/projects/create/evaluation/detail/evaluation-detail.component.html
@@ -166,7 +166,7 @@
                                                                 </div>
                                                                 <div class="col-6">
                                                                     <h5 class="mb-1">10</h5>
-                                                                    <p class="text-muted mb-0">Hallazgos pendiente</p>
+                                                                    <p class="text-muted mb-0">Hallazgos pendientes</p>
                                                                 </div>
                                                             </div>
                                                         </div>
